--- a/essai/bonprocess.css
+++ b/essai/bonprocess.css
@@ -2,11 +2,12 @@ body {
   height: 100vh;
   background-size: cover;
   color: white;
-  background-color: rgba(25, 23, 23, 0.735);
+  background-color: rgb(26, 23, 23);
   display: block;
- /* background-image: url(img1.png);
+  /* background-image: url(img1.png);
   background-repeat: no-repeat;*/
   justify-content: space-around;
+  font-size: 0.6m;
 }
 header {
   position: fixed;
@@ -18,26 +19,29 @@ header {
   justify-content: space-around;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.371);
-  padding: 0.5em;
+  padding: 1em;
   transition: top 0.5s ease-in-out;
-  backdrop-filter: blur(10px);
+  filter: blur(10px);
 }
 main {
-    top: 0;
-    right: 0;
+  top: 0;
+  right: 0;
   margin-top: 15%;
   align-items: center;
   font-size: 2em;
-  background-color: rgba(0, 0, 0, 0.371);
-  backdrop-filter: blur(10px);
-  height: 50vh;
+  height: 30vh;
+  text-align: center;
 
 }
-
+.slides {
+  font-size: 2em;
+  letter-spacing: 5px;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
 
 .nav {
   text-decoration: none;
-  color: #4f1212;
+  color: #ffffff;
   border: 2px solid;
   border-radius: 35px;
   padding: 10px;
@@ -48,8 +52,15 @@ main {
   color: white;
   border: none;
   border-radius: 35px 35px;
-  background-color: rgba(59, 173, 86, 0.773);
+  background-color: rgba(165, 45, 245, 0.773);
   padding: 15px;
+}
+.fl{
+  background-color: rgba(165, 45, 245, 0.773);
+  border-radius: 35px;
+  padding: 15px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
+  
 }
 #nom {
   font-size: 2.5em;
